--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
   "description": "",
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20250121.0",
+    "@types/node": "^22.10.10",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
     "typescript": "^5.7.3",
     "wrangler": "^3.105.0"
   },
   "dependencies": {
+    "axios": "^1.7.9",
+    "csv-parser": "^3.1.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   }
